--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body{
+    display: flex;
+    font-size: 20px;
+    flex-direction: column;
+    align-content: space-around;
+    text-align: center; 
+}
+
 .container {
     flex: 1 1 80%;
     min-height: 100px;
